fix: adjust z-index to display loader properly
- There was an issue where the loader was displayed below the form when saving a recommended movie, causing it to be hidden from view. This fix involves increasing the z-index of the loader to ensure it appears above the form.
- This change resolves the visibility issue and improves the user experience by ensuring the loader is clearly visible during the saving process.

--- a/src/components/Loader/Loader.scss
+++ b/src/components/Loader/Loader.scss
@@ -4,7 +4,7 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  z-index: 1;
+  z-index: 2;
   overflow-x: hidden;
   background: var(--primary-400);
   @include flex.flexCenter;
